desarrolla los unit test para la tarea 2

--- a/tarea2/tarea2.html
+++ b/tarea2/tarea2.html
@@ -18,6 +18,7 @@
   <button type="button" id="btn-calcular">Calcular</button>
   <em id="resultado"></em>
   <script src='tarea2.js'></script>
+  <script src='tarea2-pruebas.js'></script>
 </body>
 
 </html>
