desarrolla tarea clase 8 en tarea 1 de la clase 6
se realizaron las validaciones correspondientes, utilizando lo aprendido en clase, mostrando mensajes en la interfaz del usuario.

--- a/tarea1/tarea1.html
+++ b/tarea1/tarea1.html
@@ -6,11 +6,12 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Tarea 1</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel="stylesheet" href="tarea1.css">
 </head>
 
 <body>
   <form>
-    <fieldset>
+    <fieldset id="contenedor-cantidad-de-integrantes">
       <label for="cantidad-de-integrantes">Cuantos integrantes hay en tu familia?</label>
       <input type="number" id="cantidad-de-integrantes">
       <button type="button" id="btn-ok">OK</button>
