desarrolla tarea clase 8 en tarea 2 de la clase 6
se realizaron las validaciones correspondientes, utilizando lo aprendido en clase, mostrando mensajes en la interfaz del usuario.

--- a/tarea2/tarea2.html
+++ b/tarea2/tarea2.html
@@ -6,6 +6,11 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Tarea 2</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <style>
+    .error{
+      border: 3px solid red;
+    }
+  </style>
 </head>
 
 <body>
