agrega y vincula bootstrap para aplicar estilos
tambien ignora la carpeta node_modules para que no sea comiteada, e utiliza el gestor npm para el proyecto

--- a/tarea2/tarea2.html
+++ b/tarea2/tarea2.html
@@ -6,6 +6,7 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Tarea 2</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
   <style>
     .error{
       border: 3px solid red;
@@ -22,6 +23,8 @@
   </form><br>
   <button type="button" id="btn-calcular">Calcular</button>
   <em id="resultado"></em>
+  <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="../node_modules/@popperjs/core/dist/umd/popper.min.js"></script>
   <script src='tarea2.js'></script>
   <script src='tarea2-pruebas.js'></script>
 </body>
